--- a/css/room1.css
+++ b/css/room1.css
@@ -2,7 +2,7 @@ html {
     height: 100%;
 }
 body {
-    background-image: url(/img/backgrounds/room1.png);
+    background-image: url(../img/backgrounds/room1.png);
     height: 100%;
     background-position: center;
     background-repeat: no-repeat;
@@ -24,7 +24,7 @@ body {
     left: 5.5%;
     height: 10%;
     text-align: center;
-    background-image: url(/img/props/numberDisplay.png);
+    background-image: url(../img/props/numberDisplay.png);
     background-size: cover;
 }
 
