--- a/css/tresasure.css
+++ b/css/tresasure.css
@@ -2,7 +2,7 @@ html {
     height: 100%;
 }
 body {
-    background-image: url(/img/backgrounds/treasure.png);
+    background-image: url(../img/backgrounds/treasure.png);
     height: 100%;
     background-position: center;
     background-repeat: no-repeat;
